..F....... [ZBXNEXT-1113] redesign Configuration->Host->Discovery rules (Eduard)
..F....... [ZBXNEXT-1107] redesign Configuration->Audit (Eduard)
....I..PS. [ZBX-2604] added processing of not supported items monitored by a proxy (Sasha)
..F....... [ZBXNEXT-903] redesign Configuration->Items (Eduard)
..F....... [ZBXNEXT-909] redesign Configuration->Discovery (Eduard)

Bug fixes:
A......... [ZBX-4562] Fixed meditype.update returning wrong formatted result (Toms)
..F....... [ZBX-4187] fixed dashbord fonts on popup. fixed js error on last 20 issues (Toms)
A.F....... [ZBX-4607] fixed the script.getscriptbyhosts method returning scripts from nodes defferent from hosts (Pavels)
A.F....... [ZBX-4607] fixed the script "Host groups" parameter (Pavels)
A......... [ZBX-4607] fixed the script.get methods "selectHosts" and "selectGroups" options (Pavels)
..F....... [ZBX-4607] fixed new ID generation in DM setup (Pavels)
..F....... [ZBX-4253] fixed menu link inconsistency in tr_status.php (Toms)
..F....... [ZBX-4554] fixed ordering (Toms)
..F....... [ZBX-4295] fixed icons ending outside map. Removed icon resizing responsible for infinite loop (Toms)
..F....... [ZBX-4296] fixed popup menu unavailable for disabled hosts (Toms)
....I..... [ZBX-4693] fixed hosts table foreign key constraint error during database upgrade (dimir, Sasha)
A.F....... [ZBX-4563] fixed host macro IDs being regenerated when updating macros (Pavels)
A.F....... [ZBX-4563] fixed several macro validation issues (Pavels)
..F....... [ZBX-4563] fixed macro sorting (Pavels)
..F....... [ZBX-3735] fixed login form to send passwords via POST not GET; thanks to Joseph Bueno (Alexei)
A......... [ZBX-954] increased API version to 1.4, Zabbix 1.8.x is using 1.3 (Alexei)
A.F....... [ZBX-4604] fixed "screen" type screen item validation (Pavels)
........S. [ZBX-4560] fixed low level discovery error messages to start with uppercase 'Cannot ...' (Alexei)