@@ -275,7 +275,8 @@
 		'loadScroll' => 0,
 		'dynamic' => 1,
 		'mainObject' => 1,
-		'periodFixed' => CProfile::get('web.httptest.timelinefixed', 1)
+		'periodFixed' => CProfile::get('web.httptest.timelinefixed', 1),
+		'sliderMaximumTimePeriod' => ZBX_MAX_PERIOD
 	);
 	zbx_add_post_js('timeControl.addObject("'.$dom_graph_id.'",'.zbx_jsvalue($timeline).','.zbx_jsvalue($objData).');');
 
@@ -300,7 +301,8 @@
 		'loadScroll' => 0,
 		'dynamic' => 1,
 		'mainObject' => 1,
-		'periodFixed' => CProfile::get('web.httptest.timelinefixed', 1)
+		'periodFixed' => CProfile::get('web.httptest.timelinefixed', 1),
+		'sliderMaximumTimePeriod' => ZBX_MAX_PERIOD
 	);
 	zbx_add_post_js('timeControl.addObject("'.$dom_graph_id.'",'.zbx_jsvalue($timeline).','.zbx_jsvalue($objData).');');
 //-------------
@@ -315,7 +317,8 @@
 		'scrollWidthByImage' => 0,
 		'dynamic' => 1,
 		'mainObject' => 1,
-		'periodFixed' => CProfile::get('web.httptest.timelinefixed', 1)
+		'periodFixed' => CProfile::get('web.httptest.timelinefixed', 1),
+		'sliderMaximumTimePeriod' => ZBX_MAX_PERIOD
 	);
 
 	zbx_add_post_js('timeControl.addObject("'.$dom_graph_id.'",'.zbx_jsvalue($timeline).','.zbx_jsvalue($objData).');');
